AI-JADEDEVS4/src/objects/Account_Usage_Scorecard_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account_Usage_Scorecard__c</fullName>
        <label>Account Usage Scorecard</label>
        <referenceTo>Account_Usage_Scorecard__c</referenceTo>
        <relationshipLabel>Account Usage Scorecard Items</relationshipLabel>
        <relationshipName>Account_Usage_Scorecard_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Admin_Seats_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Seats (Configured)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Seats_Logins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Seats (Logged In)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analysis_Seats_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Analysis Seats Lic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analysis_Seats_Logins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Analysis Seats</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_for_Rollup__c</fullName>
        <formula>IF(
Year__c ==  2015 || Year__c == 2014,
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Enabled_Seats_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discovery Enabled Seats Lic</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Enabled_Seats_Logins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discovery Enabled Seats</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <formula>Admin_Seats_Licenses__c + Analysis_Seats_Licenses__c + Report_Only_Seats_Licenses__c + Report_Only_Seats_Licenses__c + Standard_Seats_Licenses__c + View_Only_Seats_Licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logins__c</fullName>
        <formula>Admin_Seats_Logins__c + Analysis_Seats_Logins__c + Analysis_Seats_Logins__c + Report_Only_Seats_Logins__c +  Standard_Seats_Logins__c + View_Only_Seats_Logins__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF ( AND(Logins__c &gt; 0, Licenses__c &gt; 0), (Logins__c/Licenses__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Report_Only_Seats_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Report Only Seats Lic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Only_Seats_Logins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Report Only Seats</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Seats_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Standard Seats Lic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Seats_Logins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Standard Seats</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Only_Seats_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>View Only Seats Lic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Only_Seats_Logins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>View Only Seats</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Usage Scorecard Item</label>
    <nameField>
        <displayFormat>AUSITEM-{0000}</displayFormat>
        <label>Account Usage Scorecard Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Usage Scorecard Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>